Improve error page text centering

--- a/error/errorstyle.css
+++ b/error/errorstyle.css
@@ -13,17 +13,14 @@
 	font-weight:900;
 }
 
-.cont
-{       
-    width:100%;        // +1 to @RonM
-    position: absolute;
-    text-align: center;
-    padding-top:42%;
-    -webkit-transform: translateY(-50%); /* child now centers itself relative to the midline based on own contents */
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    -ms-filter: 'progid:DXImageTransform.Microsoft.Matrix(Dx=0,Dy=0)'; /*IE8 */
-    filter: progid:DXImageTransform.Microsoft.Matrix(Dx=0,Dy=0); /*IE6, IE7*/
-    transform: translateY(-50%);    
+#container {
+	width: 100%;
+	padding-top: 40px;
+	position: absolute;
+	transform: translateY(-50%);
+}
+
+body {
+	overflow-x: hidden;
+	overflow-y: hidden;
 }
